<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragment.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/crod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3d21"
                android:layout_width="193dp"
                android:layout_height="42dp"
                android:layout_marginTop="36dp"
                android:text="@string/welcome"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="30sp"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView332"
                android:layout_width="193dp"
                android:layout_height="42dp"
                android:layout_marginTop="14dp"
                android:text="@string/sign_in_to_continue"
                android:textAlignment="textStart"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3d21" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Name_id_ed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                app:counterEnabled="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView332">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/email_id"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Pass_id_ed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:counterEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Name_id_ed"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:drawableStart="@drawable/ic_baseline_security_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="300dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/LoginButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_height="54dp"
                android:layout_width="200dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/cus"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_baseline_login_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Pass_id_ed"
                app:layout_constraintVertical_bias="0.164" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/switchBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/i_m_a_new_user_sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>